<?xml version="1.0" encoding="UTF-8"?>
<!--

    Licensed to the Apache Software Foundation (ASF) under one or more
    contributor license agreements.  See the NOTICE file distributed with
    this work for additional information regarding copyright ownership.
    The ASF licenses this file to You under the Apache License, Version 2.0
    (the "License"); you may not use this file except in compliance with
    the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.superbiz</groupId>
  <artifactId>multiple-arquillian-adapters</artifactId>
  <packaging>jar</packaging>
  <version>9.0.0-M8-SNAPSHOT</version>
  <name>TomEE :: Examples :: Multiple Arquillian Adapters</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tomee.version>9.0.0-M8-SNAPSHOT</tomee.version>
    <arquillian.version>1.1.10.Final</arquillian.version>
  </properties>
  <build>
    <defaultGoal>install</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <!--
        Redefining execution to:
        1. set the right arquillian adapter
        2. set the category to execute (include/exclude works too)
        3. set the arquillian launcher to use
        -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <executions>
          <execution>
            <id>test-embedded</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>${maven.test.skip}</skip>
              <argLine>-Djdk.attach.allowAttachSelf</argLine>
              <groups>org.superbiz.embedded.standalone.Embedded</groups>
              <systemPropertyVariables>
                <arquillian.launch>embedded</arquillian.launch>
                <openejb.arquillian.adapter>openejb</openejb.arquillian.adapter>
              </systemPropertyVariables>
            </configuration>
          </execution>
          <execution>
            <id>test-embedded-remote</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>${maven.test.skip}</skip>
              <groups>org.superbiz.embedded.remote.EmbeddedRemote</groups>
              <systemPropertyVariables>
                <arquillian.launch>embedded-remote</arquillian.launch>
                <openejb.arquillian.adapter>openejb</openejb.arquillian.adapter>
              </systemPropertyVariables>
            </configuration>
          </execution>
          <execution>
            <id>test-tomee-embedded</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>${maven.test.skip}</skip>
              <groups>org.superbiz.tomee.embedded.TomEEEmbedded</groups>
              <argLine>-Djdk.attach.allowAttachSelf</argLine>
              <systemPropertyVariables>
                <arquillian.launch>tomee-embedded</arquillian.launch>
                <openejb.arquillian.adapter>tomee-embedded</openejb.arquillian.adapter>
              </systemPropertyVariables>
            </configuration>
          </execution>
          <execution>
            <id>test-tomee-remote</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>${maven.test.skip}</skip>
              <groups>org.superbiz.tomee.remote.TomEERemote</groups>
              <systemPropertyVariables>
                <arquillian.launch>tomee-remote</arquillian.launch>
                <openejb.arquillian.adapter>tomee-remote</openejb.arquillian.adapter>
              </systemPropertyVariables>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <skip>true</skip>
          <parallel>none</parallel>
          <threadCount>1</threadCount>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.tomitribe.transformer</groupId>
        <artifactId>org.eclipse.transformer.maven</artifactId>
        <version>0.1.1a</version>
        <configuration>
          <classifier>jakartaee9</classifier>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>run</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>apache-m2-snapshot</id>
      <name>Apache Snapshot Repository</name>
      <url>https://repository.apache.org/content/groups/snapshots</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>jakartaee-api</artifactId>
      <version>9.1.1</version>
      <scope>provided</scope>
    </dependency>
    <!-- common arquillian dependencies -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <version>${arquillian.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- utility test deps -->
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>ziplock</artifactId>
      <version>${tomee.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- additional container part for embedded JAX-RS test -->
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>openejb-cxf-rs</artifactId>
      <version>${tomee.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- arquillian adapters -->
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>arquillian-openejb-embedded</artifactId>
      <version>${tomee.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>arquillian-tomee-embedded</artifactId>
      <version>${tomee.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>arquillian-tomee-remote</artifactId>
      <version>${tomee.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <!--
  This section allows you to configure where to publish libraries for sharing.
  It is not required and may be deleted.  For more information see:
  http://maven.apache.org/plugins/maven-deploy-plugin/
  -->
  <distributionManagement>
    <repository>
      <id>localhost</id>
      <url>file://${basedir}/target/repo/</url>
    </repository>
    <snapshotRepository>
      <id>localhost</id>
      <url>file://${basedir}/target/snapshot-repo/</url>
    </snapshotRepository>
  </distributionManagement>
</project>
